# dacade-icp-rust-challenge

./: Cargo.toml  README.md  bun.lockb  canister_ids.json  dfx.json  did.sh  package.json  pnpm-lock.yaml  webpack.config.js
.github/workflows/: action.yaml
src/hostel_manager_backend/: Cargo.toml  hostel_manager_backend.did
src/hostel_manager_backend/src/: error.rs  lib.rs  models.rs
src/hostel_manager_frontend/src/: index.html  index.js
