[package]
name = "hostel_manager_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# candid = "0.8"
# ic-cdk = "0.11.3"
# ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
# ic-stable-structures = "0.6.0"
# serde = "1.0.192"

candid = "0.9.9"
ic-cdk = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
